Fix 'hide' link for date fields in modals
- datepicker__wrapper block overlaps hide link because of relative position style.

--- a/src/ggrc/assets/stylesheets/modules/_datepicker.scss
+++ b/src/ggrc/assets/stylesheets/modules/_datepicker.scss
@@ -3,15 +3,6 @@
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
  */
 
-.datepicker__wrapper {
-  position: relative;
-  .fa-calendar {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-  }
-}
-
 .datepicker__calendar {
   position: absolute;
   z-index: zIndex(ui-autocomplete);
@@ -36,6 +27,13 @@
 
 .datepicker__input-wrapper {
   position: relative;
+
+  .fa-calendar {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+  }
+
   .datepicker__remove-value {
     cursor: pointer;
     position: absolute;
